feat(ci): add GitHub Pages publishing for provider hash manifests
- Added publish-to-github-pages composite action with comprehensive input validation and error handling
- Implemented version-specific hash manifest publishing to `.github/pages/hashes/{version}.json`
- Added auto-detection of stable vs prerelease versions for `latest.json` updates
- Created dynamic HTML index page with version listing via GitHub API
- Replaced deprecated upload-release-asset action with softprops/action-gh-release

--- a/.github/workflows/release-4-build.yml
+++ b/.github/workflows/release-4-build.yml
@@ -331,24 +331,25 @@ jobs:
           exit 1
         }
         
-    - name: Upload Windows Rhino8 Release Asset
+    - name: Upload Release Assets
       if: steps.determine_version.outputs.IS_RELEASE == 'true'
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event_name == 'release' && github.event.release.upload_url || steps.get_release_url.outputs.UPLOAD_URL }}
-        asset_path: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Windows.zip
-        asset_name: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Windows.zip
-        asset_content_type: application/zip
-        
-    - name: Upload Mac Rhino8 Release Asset
+        tag_name: ${{ steps.determine_version.outputs.VERSION }}
+        files: |
+          SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Windows.zip
+          SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Mac-not-tested.zip
+          ${{ steps.calculate_hashes.outputs.HASH_FILE }}
+
+    - name: Publish Hash Manifest to GitHub Pages
       if: steps.determine_version.outputs.IS_RELEASE == 'true'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: ./.github/actions/publish-to-github-pages
       with:
-        upload_url: ${{ github.event_name == 'release' && github.event.release.upload_url || steps.get_release_url.outputs.UPLOAD_URL }}
-        asset_path: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Mac-not-tested.zip
-        asset_name: SmartHopper-${{ steps.determine_version.outputs.VERSION }}-Rhino8-Mac-not-tested.zip
-        asset_content_type: application/zip
+        hash-file: ${{ steps.calculate_hashes.outputs.HASH_FILE }}
+        version: ${{ steps.determine_version.outputs.VERSION }}
+        pages-directory: '.github/pages/hashes'
+        update-latest: 'auto'
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
