refactor(actions): cache hash file before git operations in publish-to-github-pages action
- Added hash file caching to runner temp directory before git operations
- Prevents file loss during git stash/checkout operations that may remove the hash file
- Updated hash file path to use cached version for subsequent operations

--- a/.github/actions/publish-to-github-pages/action.yml
+++ b/.github/actions/publish-to-github-pages/action.yml
@@ -93,7 +93,12 @@ runs:
           }
         }
         $hashFile = $resolvedHashFile
-        
+
+        # Cache hash file in runner temp before git operations (git stash/checkout can remove it)
+        $tempHashPath = Join-Path $env:RUNNER_TEMP (Split-Path $hashFile -Leaf)
+        Copy-Item $hashFile -Destination $tempHashPath -Force
+        $hashFile = $tempHashPath
+
         $fileInfo = Get-Item $hashFile -ErrorAction Stop
         if ($fileInfo.Length -eq 0) {
           Write-Host "##[error] Hash file is empty!"
