--- a/.github/workflows/release-4-build.yml
+++ b/.github/workflows/release-4-build.yml
@@ -32,6 +32,7 @@ permissions:
   contents: write
   pages: write
   id-token: write
+  pull-requests: write
 
 jobs:
   build:
@@ -301,13 +302,23 @@ jobs:
           Write-Host "Creating PR to merge hash file to main..."
           $prBody = "Auto-generated PR to add provider hash manifest for version $version to the repository.`n`n**Hash File:** \`hashes/$version.json\``n**Build:** #${{ github.run_number }}`n**Commit:** ${{ github.sha }}`n`nThis PR can be auto-merged."
           
-          gh pr create --base main --head $tempBranch --title "chore: add provider hash manifest for $version" --body $prBody || Write-Host "PR creation failed or already exists"
-          
-          # Auto-merge the PR if possible
-          $prNumber = gh pr list --head $tempBranch --json number --jq '.[0].number'
-          if ($prNumber) {
-            Write-Host "Auto-merging PR #$prNumber..."
-            gh pr merge $prNumber --auto --squash --delete-branch || Write-Host "Auto-merge failed, manual merge required"
+          try {
+            gh pr create --base main --head $tempBranch --title "chore: add provider hash manifest for $version" --body $prBody
+            Write-Host "✓ PR created successfully"
+            
+            # Auto-merge the PR if possible
+            $prNumber = gh pr list --head $tempBranch --json number --jq '.[0].number'
+            if ($prNumber) {
+              Write-Host "Auto-merging PR #$prNumber..."
+              gh pr merge $prNumber --auto --squash --delete-branch
+              Write-Host "✓ PR auto-merge enabled"
+            } else {
+              Write-Host "##[warning] Could not find PR number for auto-merge"
+            }
+          } catch {
+            Write-Host "##[error] Failed to create PR: $_"
+            Write-Host "Branch '$tempBranch' created but PR creation failed. Please create PR manually."
+            exit 1
           }
         }
       env:
